[gd_scene load_steps=3 format=3 uid="uid://c1jb12ryhqsh8"]

[ext_resource type="Script" uid="uid://kgm2sthhmjs2" path="res://Busstop/bus_stop.gd" id="1_03mo6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fg8rs"]
size = Vector2(126.75, 100)

[node name="BusStop" type="Node2D"]
script = ExtResource("1_03mo6")

[node name="Busparking" type="Area2D" parent="."]
collision_mask = 3

[node name="BusParkingCol" type="CollisionShape2D" parent="Busparking"]
shape = SubResource("RectangleShape2D_fg8rs")

[node name="NewPassengerArrival" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
autostart = true

[node name="PassengerCountLabel" type="Label" parent="."]
offset_left = -33.0
offset_top = -89.0
offset_right = 50.0
offset_bottom = -47.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "count"

[node name="PassengerBoardingTime" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.8
one_shot = true

[node name="PassengerLeavingTime" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5

[connection signal="body_entered" from="Busparking" to="." method="_on_busparking_body_entered"]
[connection signal="body_exited" from="Busparking" to="." method="_on_busparking_body_exited"]
[connection signal="timeout" from="NewPassengerArrival" to="." method="_on_new_passenger_arrival_timeout"]
[connection signal="timeout" from="PassengerBoardingTime" to="." method="_on_passenger_boarding_time_timeout"]
[connection signal="timeout" from="PassengerLeavingTime" to="." method="_on_passenger_leaving_time_timeout"]
